<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #202732 "
    tools:context=".Escenas_Salon">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:background="#FF5722"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/b_home"
            android:layout_width="1dp"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Titulo"
            android:textAlignment="center"
            android:textColor="#FDFFFFFF"
            android:textSize="36sp" />

        <Button
            android:id="@+id/b_modificar"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/modificar"
            android:onClick="Siguiente_Main" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="visible">

            <Button
                android:id="@+id/b_escenas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Siguiente_Escena"
                android:text="@string/BotonEscena"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/seleccion_escenas"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#FF5722"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_cerradura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Siguiente_Cerradura"
                android:text="@string/BotonCerradura" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_alarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Siguiente_Alarma"
                android:text="@string/BotonAlarma" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_salon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/Titulo_Salon"
                android:textColor="#FF5722"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_s_lp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/Luz_Principal"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/b_s_lp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textOff = " "
                android:textOn = " "
                android:background="@drawable/luz_cerrada"
                android:onClick="Cambio_LP_S" />

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_temperatura_s"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Temperatura"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:id="@+id/tv_grados_s"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:id="@+id/tv_centigrados_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Centigrados"
                    android:textColor="#F50000"
                    android:textSize="18sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="197dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_humedad_s"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Humedad"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:id="@+id/tv_cantidad_s"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:id="@+id/tv_porcentaje_s"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Porcentaje"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"></TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/titulo_caldera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/Titulo_Caldera"
                android:textColor="#FF5722"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b_disminuir"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/disminuir"
                    android:onClick="Disminuncion_Temperatura" />

                <TextView
                    android:id="@+id/tv_estado_caldera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/b_aumentar"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/aumentar"
                    android:onClick="Aumento_Temperatura"/>
            </LinearLayout>
            <ToggleButton
                android:id="@+id/b_s_ec"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:textOff = " "
                android:textOn = " "
                android:background="@drawable/boton_apagado"
                android:onClick="Cambio_EC_S" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>